# dendy

./: .gitignore  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: built_in_catalog.json
app/src/main/assets/roms/: Batman.nes  Darkwing_Duck-U-.nes  Double Dragon II - The Revenge.nes  Lode Runner (U) [T-Rus] by Multisoft.nes  Mario Bros.nes  double_action_blaster_guys.nes  onlain-igrok.rf_23573.nes  robotfindskitten.nes  teenage-mutant-ninja-turtles-ii-the-arcade-game.nes  tom-jerry-u-p1trus_onlain-igrok.rf_.nes
app/src/main/java/com/dendy/app/: DendyApplication.kt  MainActivity.kt
app/src/main/java/com/dendy/app/di/: AppGraph.kt
app/src/main/java/com/dendy/app/ui/: DendyApp.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
core-data/: build.gradle.kts
core-data/src/main/java/com/dendy/core/data/: BuiltInAssets.kt  InMemoryRepositories.kt  Repositories.kt
core-emulation/: build.gradle.kts
core-emulation/src/main/cpp/: CMakeLists.txt  dendy_libretro_bridge.cpp
core-emulation/src/main/java/com/dendy/core/emulation/: EmulationContracts.kt  LibretroGlRenderer.kt  LibretroRuntime.kt  NativeBindings.kt
core-model/: build.gradle.kts
core-model/src/main/java/com/dendy/core/model/: Models.kt
docs/: ARCHITECTURE.md  BUILT_IN_CATALOG.md
feature-library/: build.gradle.kts
feature-player/: build.gradle.kts
feature-player/src/main/java/com/dendy/feature/player/: PlayerRoute.kt
feature-settings/: build.gradle.kts
gradle/: libs.versions.toml
(+2 files in other folders)
